cmake_minimum_required(VERSION 3.10)
project(MatrixMultiplication CUDA)
set(CMAKE_CXX_STANDARD 17)
enable_language(C)
enable_language(CXX)
find_package(CUDA REQUIRED)
include_directories(${CMAKE_SOURCE_DIR})
set(SOURCES conv_1d_naive.cu)
cuda_add_executable(conv_1d_n ${SOURCES})
set(SOURCES conv_1d_shared_mem.cu)
cuda_add_executable(conv_1d_s ${SOURCES})