cmake_minimum_required(VERSION 3.10)
project(MatrixMultiplication CUDA)
set(CMAKE_CXX_STANDARD 17)
enable_language(C)
enable_language(CXX)
find_package(CUDA REQUIRED)
include_directories(${CMAKE_SOURCE_DIR})
set(SOURCES mat_mul.cu)
cuda_add_executable(matrix_mul ${SOURCES})
set(SOURCES mat_mul_tiled.cu)
cuda_add_executable(matrix_mul_tiled ${SOURCES})