cmake_minimum_required(VERSION 3.10)
project(RGB2GRAY CUDA)
set(CMAKE_CXX_STANDARD 17)
enable_language(C)
enable_language(CXX)
find_package(CUDA REQUIRED)
find_package(JPEG REQUIRED)
include_directories(${CMAKE_SOURCE_DIR})
include_directories(${JPEG_INCLUDE_DIRS})
set(SOURCES rgb2gray.cu)
cuda_add_executable(rgb2gray ${SOURCES})
target_link_libraries(rgb2gray ${JPEG_LIBRARIES})
set(SOURCES img_blur.cu)
cuda_add_executable(img_blur ${SOURCES})
target_link_libraries(img_blur ${JPEG_LIBRARIES})