cmake_minimum_required(VERSION 3.10)
project(tonemap CUDA)
set(CMAKE_CXX_STANDARD 17)
enable_language(C)
enable_language(CXX)
enable_language(CUDA)
find_package(OpenCV REQUIRED)
find_package(CUDA REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
include_directories(${CMAKE_SOURCE_DIR})
set (SOURCES main.cpp transforms.cu)
cuda_add_executable(${PROJECT_NAME} ${SOURCES})
target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS})
